--- a/fury161_frontend/package.json
+++ b/fury161_frontend/package.json
@@ -4,7 +4,9 @@
   "description": "Frontend for the fury161 web application.",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.prod.js",
+    "develop": "webpack --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/peddn/fury161#readme",
   "devDependencies": {
     "bulma": "^0.9.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "mini-css-extract-plugin": "^1.3.3",
@@ -25,6 +28,7 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-merge": "^5.7.2"
   }
 }
